--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
     </div>
     <div class="contenedor-principal">
 
-        <div class="contenedor-card" id="contenedor-card">
+        <div class="contenedor-card cont-card1">
 
-            <div class="card" id="card">
+            <div class="card card1">
                 <div class="figura-contenedor">
-                    <img class="figura" src="imgs/Avion.png" alt="">
-                    <div class="fondito"></div>
-                    <div class="fondito2"></div>
+                    <img class="figura figura1" src="imgs/Avion.png" alt="">
+                    <div class="fondito fdta1"></div>
+                    <div class="fondito2 fdta2"></div>
                 </div>
-                <div class="descripcion">
-                    <h3 class="nombre-jefe">AVION</h3>
+                <div class="descripcion descripcion1">
+                    <h3 class="nombre-jefe nombre-jefe1">AVION</h3>
                     <h4 class="sub-titulos">Enigma</h4>
                     <p>"Tu próximo enemigo proyecta una sombra colosal a través de un lago brumoso... A medida que se
                         eleva por el cielo... Para llegar hasta él no es tarea fácil."</p>
@@ -51,76 +51,76 @@
                         hacia ti.</p>
                 </div>
 
-                <button class="btn">Ver más información</button>
+                <button class="btn btn1">Ver más información</button>
 
             </div>
         </div>
 
-        <div class="contenedor-card" id="contenedor-card">
-            <div class="card" id="card">
+        <div class="contenedor-card cont-card2" id="contenedor-card">
+            <div class="card card2">
                 <div class="figura-contenedor">
-                    <div class="fondito"></div>
-                    <div class="fondito2"></div>
-                    <img class="figura" src="imgs/Barba.png" alt="">
+                    <div class="fondito fdtb1"></div>
+                    <div class="fondito2 fdtb2"></div>
+                    <img class="figura figura2" src="imgs/Barba.png" alt="">
                 </div>
-                <div class="descripcion">
-                    <h3>BARBA</h3>
-                    <h4>Enigma</h4>
+                <div class="descripcion descripcion2">
+                    <h3 class="nombre-jefe nombre-jefe2">BARBA</h3>
+                    <h4 class="sub-titulos">Enigma</h4>
                     <p>""Tu próximo enemigo es... Un gigante que se esconde debajo del templo... Su deseo es la
                         destrucción... Pero, un tonto no es."</p>
-                    <h4>Ubicación</h4>
+                    <h4 class="sub-titulos">Ubicación</h4>
                     <p>Ruinas de la Arena, hacia el suroeste, después de atravesar un bosque.</p>
-                    <h4>Mecánica Principal</h4>
+                    <h4 class="sub-titulos">Mecánica Principal</h4>
                     <p>Debes conseguir que se agache para subir a él por su larga barba.</p>
                 </div>
 
-                <button>Ver más información</button>
+                <button class="btn btn2">Ver más información</button>
 
             </div>
         </div>
 
-        <div class="contenedor-card" id="contenedor-card">
-            <div class="card">
+        <div class="contenedor-card cont-card3" id="contenedor-card">
+            <div class="card card3">
                 <div class="figura-contenedor">
-                    <div class="fondito"></div>
-                    <div class="fondito2"></div>
-                    <img class="figura" src="imgs/Hydrus.png" alt="">
+                    <div class="fondito fdtc1"></div>
+                    <div class="fondito2 fdtc2"></div>
+                    <img class="figura figura3" src="imgs/Hydrus.png" alt="">
                 </div>
-                <div class="descripcion">
-                    <h3>HYDRUS</h3>
-                    <h4>Enigma</h4>
+                <div class="descripcion descripcion3">
+                    <h3 class="nombre-jefe nombre-jefe3">HYDRUS</h3>
+                    <h4 class="sub-titulos">Enigma</h4>
                     <p>""Tu enemigo próximo enemigo es... Una ruina escondida en el lago... Una oleada de truenos se
                         esconde bajo el agua."</p>
-                    <h4>Ubicación</h4>
+                    <h4 class="sub-titulos">Ubicación</h4>
                     <p>Lago Canopy, hacia el nortoeste del mapa, en un gran lago.</p>
-                    <h4>Mecánica Principal</h4>
+                    <h4 class="sub-titulos">Mecánica Principal</h4>
                     <p>echándote al agua y esperando a que se acerque a ti para agarrarte a él.</p>
                 </div>
 
-                <button>Ver más información</button>
+                <button class="btn btn3">Ver más información</button>
 
             </div>
         </div>
-        <div class="contenedor-card" id="contenedor-card">
-            <div class="card">
+        <div class="contenedor-card cont-card4" id="contenedor-card">
+            <div class="card card4">
                 <div class="figura-contenedor">
-                    <div class="fondito"></div>
-                    <div class="fondito2"></div>
-                    <img class="figura" src="imgs/Kuromori.png" alt="">
+                    <div class="fondito fdtd1"></div>
+                    <div class="fondito2 fdtd2"></div>
+                    <img class="figura figura4" src="imgs/Kuromori.png" alt="">
                 </div>
-                <div class="descripcion">
-                    <h3>KUMONIRI</h3>
-                    <h4>Enigma</h4>
+                <div class="descripcion descripcion4">
+                    <h3 class="nombre-jefe nombre-jefe4">KUMONIRI</h3>
+                    <h4 class="sub-titulos">Enigma</h4>
                     <p>"Tu próximo enemigo es... una cola atrapada dentro de un cubo, en lo profundo de la selva... una
                         sombra que se arrastra en las paredes."</p>
-                    <h4>Ubicación</h4>
+                    <h4 class="sub-titulos">Ubicación</h4>
                     <p>Ruinas del coliseo, después de un desierto arenoso, hacia el este cerca de donde se encontraba el
                         primer coloso, dentro de un templo con varios niveles.</p>
-                    <h4>Mecánica Principal</h4>
+                    <h4 class="sub-titulos">Mecánica Principal</h4>
                     <p>Hacerlo caer desde las paredes para que se quede boca arriba en el suelo.</p>
                 </div>
 
-                <button>Ver más información</button>
+                <button class="btn btn4">Ver más información</button>
 
             </div>
         </div>
