--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p>Ilustraciones de los colosos: <a href="https://linktr.ee/jenn.designs"> Jenn Desings</a> </p>
+    </footer>
 
 </body>
 <script src="js/script.js"></script>
