--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
     </div>
     <footer>
-        <p>Ilustraciones de los colosos: <a href="https://linktr.ee/jenn.designs"> Jenn Desings</a> </p>
+        <p>Ilustraciones de los colosos: <a target="_blank" href="https://linktr.ee/jenn.designs"> Jenn Desings</a> </p>
     </footer>
 
 </body>
